<resources>
    <string name="app_name">AccountBook</string>
    <string name="action_settings">Settings</string>
    <string name="special_char"><![CDATA[<]]></string>
    <string name="categoryFood">Food</string>
    <string name="categoryAmusement">Amusement</string>
    <string name="categoryCloth">Cloth</string>
    <string name="categoryUtilities">Utilities</string>
    <string name="categoryHouseRent">House Rent</string>
    <string name="categoryCellPhone">Cell Phone</string>
    <string name="categoryTransportationFee">Transportation Fee</string>
    <string name="categoryOther">Other</string>
    <string name="tab1">Calender</string>
    <string name="tab2">Monthly</string>

</resources>
