<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:id="@+id/textView"
        android:text="Categorize"
        android:textSize="30sp"
        android:textAlignment="center" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/categoryFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbFood" />

        <RadioButton
            android:text="@string/categoryAmusement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbAmusement"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/categoryCloth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbCloth"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/categoryUtilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbUtilities"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/categoryHouseRent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbHouseRent"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/categoryCellPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbCellPhone"
            android:layout_weight="1"
            android:duplicateParentState="false" />

        <RadioButton
            android:text="@string/categoryTransportationFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTransportationFee"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/categoryOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbOther"
            android:layout_weight="1" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp">

        <Button
            android:text="OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>